# hacknation-2026

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
agent/handoffs/: 2026-02-08-foundation-orchestrator.md
agent/knowledge/: initial-architecture.md  openai-agents-sdk.md  overview.md
agent/tasks/: 2026-02-07-chief-of-staff-prototype.md  2026-02-08-agent-design.md  2026-02-08-foundation-scaffold.md
agent/transcripts/: 2026-02-08-chief-of-staff-architecture-revision-worktree-parallelism-orchestrator-handoff.txt
core/: Dockerfile  pyproject.toml
core/src/core/: context.py  embeddings.py  git_ops.py  graph.py  graph_index.py  server.py  tools.py  tracing.py
core/src/core/agents/: ingest.py  query.py
docs/: flows.md  technical-overview.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: GraphView.tsx  IngestPanel.tsx  NodePanel.tsx  QueryPanel.tsx  TimelineSlider.tsx  TraceAnimation.tsx
ingestors/common/: pyproject.toml
ingestors/common/src/common/: __init__.py  ingest_client.py
ingestors/discord/: config.yaml  main.py  pyproject.toml
ingestors/email/: config.yaml  main.py  pyproject.toml
ingestors/enron/: pyproject.toml
ingestors/enron/src/enron/: main.py
ingestors/file/: Dockerfile  config.yaml  main.py  pyproject.toml
ingestors/file/src/file/: __init__.py
ingestors/file/static/: index.html
poc/: pyproject.toml
poc/seeds/: events.json
poc/src/: context.py  embeddings.py  export_graph.py  graph.py  main.py  server.py  tools.py
poc/src/agents/: ingest.py  query.py
poc/web/: index.html
shared/: pyproject.toml
shared/src/shared/: __init__.py  models.py
