[project]
name = "core"
version = "0.1.0"
description = "AI Chief of Staff — core service"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai-agents",
    "openai",
    "chromadb",
    "pydantic",
    "shared",
    "pydantic-settings>=2.12.0",
    "networkx",
    "scipy>=1.17.0",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
