[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dominik Fluch", email = "dominik@diefluchs.at" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "shared",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = { workspace = true }
