[project]
name = "email"
version = "0.1.0"
description = "Email ingestor for Hacknation 2026"
readme = "README.md"
authors = [
    { name = "Dominik Fluch", email = "dominik@diefluchs.at" }
]
requires-python = ">=3.12"
dependencies = [
    "imapclient>=2.2.0",
    "html2text>=2020.1.16",
    "common"
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"