[project]
name = "enron"
version = "0.1.0"
description = "Enron email dataset ingestor"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.0",
    "common",
]

[project.scripts]
enron-ingest = "enron.main:main"

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
